--- a/styles/ma-nao.css
+++ b/styles/ma-nao.css
@@ -2,8 +2,33 @@
   background-color: rgb(15, 15, 15);
   padding-bottom: 20px;
 
+  /* 字体族变量 */
   --font-family-en: 'vertu-en', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
   --font-family-ak: 'vertu-ak', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+
+  /* 字体颜色变量 */
+  --color-primary: rgb(255, 255, 255);
+  --color-secondary: rgb(134, 134, 139);
+  --color-accent: rgb(231, 202, 172);
+  --color-dark: rgb(17, 16, 16);
+
+  /* 字体大小变量 - PC端 */
+  --font-size-h1: 48px;
+  --font-size-h2: 32px;
+  --font-size-h3: 24px;
+  --font-size-h4: 20px;
+  --font-size-p-large: 24px;
+  --font-size-p-medium: 21px;
+  --font-size-p-normal: 16px;
+  --font-size-p-small: 14px;
+
+  /* 行高变量 */
+  --line-height-h1: 1.8;
+  --line-height-h2: 35px;
+  --line-height-p-large: 31px;
+  --line-height-p-medium: 27px;
+  --line-height-p-normal: 21px;
+  --line-height-p-small: 18px;
 }
 
 /* 顶部横幅区域 - 全宽 */
@@ -36,9 +61,9 @@
   -webkit-text-fill-color: transparent;
   background-clip: text;
   font-family: var(--font-family-en);
-  font-size: 48px;
+  font-size: var(--font-size-h1);
   font-weight: 400;
-  line-height: 1.8;
+  line-height: var(--line-height-h1);
   letter-spacing: 1px;
   text-align: center;
   text-transform: uppercase;
@@ -47,7 +72,7 @@
 .logo-title p {
   color: rgb(0, 0, 0);
   font-family: var(--font-family-ak);
-  font-size: 24px;
+  font-size: var(--font-size-p-large);
   font-weight: 400;
   line-height: 1;
   letter-spacing: 0px;
@@ -62,9 +87,9 @@
   background: rgb(255, 255, 255);
   cursor: pointer;
 
-  color: rgb(17, 16, 16);
+  color: var(--color-dark);
   font-family: var(--font-family-en);
-  font-size: 16px;
+  font-size: var(--font-size-p-normal);
   font-weight: 400;
   letter-spacing: 0px;
   text-align: center;
@@ -90,11 +115,11 @@
   margin-bottom: 60px;
 }
 .quantum-agape .content-wrapper h2 {
-  color: rgb(255, 255, 255);
+  color: var(--color-primary);
   font-family: var(--font-family-en);
-  font-size: 32px;
+  font-size: var(--font-size-h2);
   font-weight: 400;
-  line-height: 35px;
+  line-height: var(--line-height-h2);
   letter-spacing: 0px;
   text-align: center;
   text-transform: uppercase;
@@ -104,11 +129,11 @@
 .quantum-agape .content-wrapper p {
   max-width: 868px;
   margin: 0 auto;
-  color: rgb(134, 134, 139);
+  color: var(--color-secondary);
   font-family: var(--font-family-ak);
-  font-size: 16px;
+  font-size: var(--font-size-p-normal);
   font-weight: normal;
-  line-height: 21px;
+  line-height: var(--line-height-p-normal);
   letter-spacing: 0px;
   text-align: center;
 }
@@ -152,10 +177,10 @@
 }
 
 .celestial-dawn .content-wrapper .feature-text h2 {
-  color: rgb(255, 255, 255);
+  color: var(--color-primary);
   font-family: var(--font-family-en);
-  font-size: 32px;
-  line-height: 35px;
+  font-size: var(--font-size-h2);
+  line-height: var(--line-height-h2);
   font-weight: 400;
   letter-spacing: 0px;
   text-transform: uppercase;
@@ -163,20 +188,20 @@
 
 .celestial-dawn .content-wrapper .feature-text p {
   margin-top: 30px;
-  color: rgb(255, 255, 255);
+  color: var(--color-primary);
   font-family: var(--font-family-ak);
-  font-size: 24px;
+  font-size: var(--font-size-p-large);
   font-weight: 400;
-  line-height: 31px;
+  line-height: var(--line-height-p-large);
   letter-spacing: 0px;
   text-align: left;
 }
 
 .content-wrapper h2 {
-  color: rgb(255, 255, 255);
+  color: var(--color-primary);
 }
 .content-wrapper p {
-  color: rgb(255, 255, 255);
+  color: var(--color-primary);
 }
 
 /* 添加左右滑动控制按钮 */
@@ -316,9 +341,9 @@
 
 .pattern-card h3 {
   line-height: 23px;
-  color: rgb(231, 202, 172);
+  color: var(--color-accent);
   font-family: var(--font-family-ak);
-  font-size: 18px;
+  font-size: var(--font-size-h4);
   font-weight: 400;
   line-height: 23px;
   letter-spacing: 0px;
@@ -329,11 +354,11 @@
 .pattern-card p {
   margin-top: 8px;
   line-height: 18px;
-  color: rgb(255, 255, 255);
+  color: var(--color-primary);
   font-family: var(--font-family-ak);
-  font-size: 14px;
+  font-size: var(--font-size-p-small);
   font-weight: 400;
-  line-height: 18px;
+  line-height: var(--line-height-p-small);
   letter-spacing: 0px;
   text-align: center;
   text-transform: capitalize;
@@ -379,11 +404,11 @@
 }
 
 .engineering-content h2 {
-  color: rgb(255, 255, 255);
+  color: var(--color-primary);
   font-family: var(--font-family-en);
-  font-size: 32px;
+  font-size: var(--font-size-h2);
   font-weight: 400;
-  line-height: 35px;
+  line-height: var(--line-height-h2);
   letter-spacing: 0px;
   text-align: left;
   text-transform: uppercase;
@@ -391,11 +416,11 @@
 }
 .engineering-content p {
   margin-top: 6px;
-  color: rgb(231, 202, 172);
+  color: var(--color-accent);
   font-family: var(--font-family-ak);
-  font-size: 16px;
+  font-size: var(--font-size-p-normal);
   font-weight: 400;
-  line-height: 21px;
+  line-height: var(--line-height-p-normal);
   letter-spacing: 0px;
   text-align: left;
 }
@@ -407,11 +432,11 @@
 
 .engineering-content li {
   margin-bottom: 6px;
-  color: rgb(255, 255, 255);
+  color: var(--color-primary);
   font-family: var(--font-family-ak);
-  font-size: 14px;
+  font-size: var(--font-size-p-small);
   font-weight: 400;
-  line-height: 18px;
+  line-height: var(--line-height-p-small);
   letter-spacing: 0px;
   text-align: left;
   text-transform: capitalize;
@@ -950,6 +975,24 @@ section {
 @media screen and (max-width: 768px) {
   .quantum-body {
     overflow-x: hidden;
+
+    /* 移动端字体大小变量 */
+    /* --font-size-h1: 32px;
+    --font-size-h2: 24px;
+    --font-size-h3: 20px;
+    --font-size-h4: 16px;
+    --font-size-p-large: 18px;
+    --font-size-p-medium: 16px;
+    --font-size-p-normal: 16px;
+    --font-size-p-small: 12px; */
+
+    /* 移动端行高变量 */
+    /* --line-height-h1: 1.4;
+    --line-height-h2: 26px;
+    --line-height-p-large: 23px;
+    --line-height-p-medium: 21px;
+    --line-height-p-normal: 21px;
+    --line-height-p-small: 16px; */
   }
   .quantum-body > section {
     padding-left: 7.47vw;
